Source/quantumCode/AST_Scripts/SpecExpParser.py
# Generated from SpecExp.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class SpecExpParser ( Parser ):

    grammarFileName = "SpecExp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'->'", "'A'", "'.'", "'E'", 
                     "':'", "','", "'nat'", "'Q'", "'Nor'", "'Phi'", "'not'", 
                     "'&&'", "'||'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'<'", "'='", "'>'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'@'", "'...'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Nat", "Qt", "Nor", "Phi", "Not", "And", 
                      "Or", "Plus", "Minus", "Mult", "Div", "Mod", "Less", 
                      "Equal", "Greater", "Number", "Identifier", "Letter", 
                      "LetterOrDigit", "StrLiteral", "AT", "ELLIPSIS", "WS", 
                      "Comment", "Line_Comment" ]

    RULE_program = 0
    RULE_atype = 1
    RULE_arrow = 2
    RULE_always = 3
    RULE_exists = 4
    RULE_qexp = 5
    RULE_qexps = 6
    RULE_vexp = 7
    RULE_bexp = 8
    RULE_numexp = 9

    ruleNames =  [ "program", "atype", "arrow", "always", "exists", "qexp", 
                   "qexps", "vexp", "bexp", "numexp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    Nat=9
    Qt=10
    Nor=11
    Phi=12
    Not=13
    And=14
    Or=15
    Plus=16
    Minus=17
    Mult=18
    Div=19
    Mod=20
    Less=21
    Equal=22
    Greater=23
    Number=24
    Identifier=25
    Letter=26
    LetterOrDigit=27
    StrLiteral=28
    AT=29
    ELLIPSIS=30
    WS=31
    Comment=32
    Line_Comment=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrow(self):
            return self.getTypedRuleContext(SpecExpParser.ArrowContext,0)


        def always(self):
            return self.getTypedRuleContext(SpecExpParser.AlwaysContext,0)


        def exists(self):
            return self.getTypedRuleContext(SpecExpParser.ExistsContext,0)


        def getRuleIndex(self):
            return SpecExpParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SpecExpParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 23
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SpecExpParser.Nor, SpecExpParser.Phi]:
                self.enterOuterAlt(localctx, 1)
                self.state = 20
                self.arrow()
                pass
            elif token in [SpecExpParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 21
                self.always()
                pass
            elif token in [SpecExpParser.T__5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 22
                self.exists()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Nat(self):
            return self.getToken(SpecExpParser.Nat, 0)

        def Qt(self):
            return self.getToken(SpecExpParser.Qt, 0)

        def vexp(self):
            return self.getTypedRuleContext(SpecExpParser.VexpContext,0)


        def getRuleIndex(self):
            return SpecExpParser.RULE_atype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtype" ):
                listener.enterAtype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtype" ):
                listener.exitAtype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtype" ):
                return visitor.visitAtype(self)
            else:
                return visitor.visitChildren(self)




    def atype(self):

        localctx = SpecExpParser.AtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_atype)
        try:
            self.state = 31
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SpecExpParser.Nat]:
                self.enterOuterAlt(localctx, 1)
                self.state = 25
                self.match(SpecExpParser.Nat)
                pass
            elif token in [SpecExpParser.Qt]:
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.match(SpecExpParser.Qt)
                self.state = 27
                self.match(SpecExpParser.T__0)
                self.state = 28
                self.vexp(0)
                self.state = 29
                self.match(SpecExpParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrowContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qexps(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecExpParser.QexpsContext)
            else:
                return self.getTypedRuleContext(SpecExpParser.QexpsContext,i)


        def getRuleIndex(self):
            return SpecExpParser.RULE_arrow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrow" ):
                listener.enterArrow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrow" ):
                listener.exitArrow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrow" ):
                return visitor.visitArrow(self)
            else:
                return visitor.visitChildren(self)




    def arrow(self):

        localctx = SpecExpParser.ArrowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_arrow)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.qexps()
            self.state = 34
            self.match(SpecExpParser.T__2)
            self.state = 35
            self.qexps()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AlwaysContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vexp(self):
            return self.getTypedRuleContext(SpecExpParser.VexpContext,0)


        def program(self):
            return self.getTypedRuleContext(SpecExpParser.ProgramContext,0)


        def getRuleIndex(self):
            return SpecExpParser.RULE_always

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlways" ):
                listener.enterAlways(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlways" ):
                listener.exitAlways(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlways" ):
                return visitor.visitAlways(self)
            else:
                return visitor.visitChildren(self)




    def always(self):

        localctx = SpecExpParser.AlwaysContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_always)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(SpecExpParser.T__3)
            self.state = 38
            self.vexp(0)
            self.state = 39
            self.match(SpecExpParser.T__4)
            self.state = 40
            self.program()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExistsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(SpecExpParser.Identifier, 0)

        def atype(self):
            return self.getTypedRuleContext(SpecExpParser.AtypeContext,0)


        def program(self):
            return self.getTypedRuleContext(SpecExpParser.ProgramContext,0)


        def AT(self):
            return self.getToken(SpecExpParser.AT, 0)

        def bexp(self):
            return self.getTypedRuleContext(SpecExpParser.BexpContext,0)


        def getRuleIndex(self):
            return SpecExpParser.RULE_exists

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExists" ):
                listener.enterExists(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExists" ):
                listener.exitExists(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExists" ):
                return visitor.visitExists(self)
            else:
                return visitor.visitChildren(self)




    def exists(self):

        localctx = SpecExpParser.ExistsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exists)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(SpecExpParser.T__5)
            self.state = 43
            self.match(SpecExpParser.Identifier)
            self.state = 44
            self.match(SpecExpParser.T__6)
            self.state = 45
            self.atype()
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SpecExpParser.AT:
                self.state = 46
                self.match(SpecExpParser.AT)
                self.state = 47
                self.bexp(0)


            self.state = 50
            self.match(SpecExpParser.T__4)
            self.state = 51
            self.program()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Nor(self):
            return self.getToken(SpecExpParser.Nor, 0)

        def Identifier(self):
            return self.getToken(SpecExpParser.Identifier, 0)

        def vexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecExpParser.VexpContext)
            else:
                return self.getTypedRuleContext(SpecExpParser.VexpContext,i)


        def Phi(self):
            return self.getToken(SpecExpParser.Phi, 0)

        def getRuleIndex(self):
            return SpecExpParser.RULE_qexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQexp" ):
                listener.enterQexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQexp" ):
                listener.exitQexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQexp" ):
                return visitor.visitQexp(self)
            else:
                return visitor.visitChildren(self)




    def qexp(self):

        localctx = SpecExpParser.QexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_qexp)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SpecExpParser.Nor]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.match(SpecExpParser.Nor)
                self.state = 54
                self.match(SpecExpParser.T__0)
                self.state = 55
                self.match(SpecExpParser.Identifier)
                self.state = 56
                self.match(SpecExpParser.T__7)
                self.state = 57
                self.vexp(0)
                self.state = 58
                self.match(SpecExpParser.T__7)
                self.state = 59
                self.vexp(0)
                self.state = 60
                self.match(SpecExpParser.T__1)
                pass
            elif token in [SpecExpParser.Phi]:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(SpecExpParser.Phi)
                self.state = 63
                self.match(SpecExpParser.T__0)
                self.state = 64
                self.match(SpecExpParser.Identifier)
                self.state = 65
                self.match(SpecExpParser.T__7)
                self.state = 66
                self.vexp(0)
                self.state = 67
                self.match(SpecExpParser.T__7)
                self.state = 68
                self.vexp(0)
                self.state = 69
                self.match(SpecExpParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QexpsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecExpParser.QexpContext)
            else:
                return self.getTypedRuleContext(SpecExpParser.QexpContext,i)


        def getRuleIndex(self):
            return SpecExpParser.RULE_qexps

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQexps" ):
                listener.enterQexps(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQexps" ):
                listener.exitQexps(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQexps" ):
                return visitor.visitQexps(self)
            else:
                return visitor.visitChildren(self)




    def qexps(self):

        localctx = SpecExpParser.QexpsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_qexps)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.qexp()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SpecExpParser.Nor or _la==SpecExpParser.Phi:
                self.state = 74
                self.qexp()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(SpecExpParser.Identifier, 0)

        def numexp(self):
            return self.getTypedRuleContext(SpecExpParser.NumexpContext,0)


        def vexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecExpParser.VexpContext)
            else:
                return self.getTypedRuleContext(SpecExpParser.VexpContext,i)


        def Plus(self):
            return self.getToken(SpecExpParser.Plus, 0)

        def Minus(self):
            return self.getToken(SpecExpParser.Minus, 0)

        def Mult(self):
            return self.getToken(SpecExpParser.Mult, 0)

        def Div(self):
            return self.getToken(SpecExpParser.Div, 0)

        def Mod(self):
            return self.getToken(SpecExpParser.Mod, 0)

        def getRuleIndex(self):
            return SpecExpParser.RULE_vexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVexp" ):
                listener.enterVexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVexp" ):
                listener.exitVexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVexp" ):
                return visitor.visitVexp(self)
            else:
                return visitor.visitChildren(self)



    def vexp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SpecExpParser.VexpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_vexp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SpecExpParser.Identifier]:
                self.state = 81
                self.match(SpecExpParser.Identifier)
                pass
            elif token in [SpecExpParser.Minus, SpecExpParser.Number]:
                self.state = 82
                self.numexp()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 100
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = SpecExpParser.VexpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_vexp)
                        self.state = 85
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 86
                        self.match(SpecExpParser.Plus)
                        self.state = 87
                        self.vexp(6)
                        pass

                    elif la_ == 2:
                        localctx = SpecExpParser.VexpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_vexp)
                        self.state = 88
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 89
                        self.match(SpecExpParser.Minus)
                        self.state = 90
                        self.vexp(5)
                        pass

                    elif la_ == 3:
                        localctx = SpecExpParser.VexpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_vexp)
                        self.state = 91
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 92
                        self.match(SpecExpParser.Mult)
                        self.state = 93
                        self.vexp(4)
                        pass

                    elif la_ == 4:
                        localctx = SpecExpParser.VexpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_vexp)
                        self.state = 94
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 95
                        self.match(SpecExpParser.Div)
                        self.state = 96
                        self.vexp(3)
                        pass

                    elif la_ == 5:
                        localctx = SpecExpParser.VexpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_vexp)
                        self.state = 97
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 98
                        self.match(SpecExpParser.Mod)
                        self.state = 99
                        self.vexp(2)
                        pass

             
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class BexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecExpParser.VexpContext)
            else:
                return self.getTypedRuleContext(SpecExpParser.VexpContext,i)


        def Equal(self):
            return self.getToken(SpecExpParser.Equal, 0)

        def Less(self):
            return self.getToken(SpecExpParser.Less, 0)

        def Greater(self):
            return self.getToken(SpecExpParser.Greater, 0)

        def Not(self):
            return self.getToken(SpecExpParser.Not, 0)

        def bexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecExpParser.BexpContext)
            else:
                return self.getTypedRuleContext(SpecExpParser.BexpContext,i)


        def And(self):
            return self.getToken(SpecExpParser.And, 0)

        def Or(self):
            return self.getToken(SpecExpParser.Or, 0)

        def getRuleIndex(self):
            return SpecExpParser.RULE_bexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBexp" ):
                listener.enterBexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBexp" ):
                listener.exitBexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBexp" ):
                return visitor.visitBexp(self)
            else:
                return visitor.visitChildren(self)



    def bexp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SpecExpParser.BexpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_bexp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 106
                self.vexp(0)
                self.state = 107
                self.match(SpecExpParser.Equal)
                self.state = 108
                self.vexp(0)
                pass

            elif la_ == 2:
                self.state = 110
                self.vexp(0)
                self.state = 111
                self.match(SpecExpParser.Less)
                self.state = 112
                self.vexp(0)
                pass

            elif la_ == 3:
                self.state = 114
                self.vexp(0)
                self.state = 115
                self.match(SpecExpParser.Greater)
                self.state = 116
                self.vexp(0)
                pass

            elif la_ == 4:
                self.state = 118
                self.match(SpecExpParser.Not)
                self.state = 119
                self.bexp(3)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 130
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 128
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = SpecExpParser.BexpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_bexp)
                        self.state = 122
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 123
                        self.match(SpecExpParser.And)
                        self.state = 124
                        self.bexp(3)
                        pass

                    elif la_ == 2:
                        localctx = SpecExpParser.BexpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_bexp)
                        self.state = 125
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 126
                        self.match(SpecExpParser.Or)
                        self.state = 127
                        self.bexp(2)
                        pass

             
                self.state = 132
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class NumexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Number(self):
            return self.getToken(SpecExpParser.Number, 0)

        def Minus(self):
            return self.getToken(SpecExpParser.Minus, 0)

        def getRuleIndex(self):
            return SpecExpParser.RULE_numexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumexp" ):
                listener.enterNumexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumexp" ):
                listener.exitNumexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumexp" ):
                return visitor.visitNumexp(self)
            else:
                return visitor.visitChildren(self)




    def numexp(self):

        localctx = SpecExpParser.NumexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_numexp)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SpecExpParser.Number]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(SpecExpParser.Number)
                pass
            elif token in [SpecExpParser.Minus]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(SpecExpParser.Minus)
                self.state = 135
                self.match(SpecExpParser.Number)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[7] = self.vexp_sempred
        self._predicates[8] = self.bexp_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def vexp_sempred(self, localctx:VexpContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 1)
         

    def bexp_sempred(self, localctx:BexpContext, predIndex:int):
            if predIndex == 5:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 6:
                return self.precpred(self._ctx, 1)
         




